--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,75 @@
     transform: rotate(360deg);
   }
 }
+
+/* ###################################################### */
+
+.head {
+  display: block;
+  text-align: center;
+}
+
+.head h2 {
+  display: inline-block;
+  padding: 5px;
+  margin-left: 5%;
+  margin-right: 5%;
+  border: 0.8px solid black;
+}
+
+/* #########################################for input field############################ */
+
+.form {
+  box-sizing: border-box;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+input,
+select {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+input[type="submit"] {
+  font-weight: bold;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+input[type="submit"]:hover {
+  background-color: royalblue;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+@media screen and (max-width: 600px) {
+  /* .col-label, */
+  /* .col-input, */
+  input[type="submit"] {
+    width: 98%;
+    margin-top: 0;
+  }
+}
+
+/* ##################################################### */
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
+}
